Powered by Gate Screen updated and wired to MainLayoutController