@@ -1,31 +1,34 @@
 package com.brightfutureschool.controller.info;
 
 import javafx.fxml.FXML;
-import javafx.scene.control.Label;
-import javafx.stage.Stage;
+import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
 
 import java.awt.Desktop;
 import java.net.URI;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class PoweredByGateController {
 
-    @FXML private Label whatsappLabel;
+    @FXML private ImageView gateLogo;
 
-    private static final String WHATSAPP_NUMBER = "923XXXXXXXXX"; // TODO: replace with your actual WhatsApp number (country code, no +, no spaces)
+    private static final String GATE_WHATSAPP_NUMBER = "923183074951";
 
     @FXML
-    private void onMessageOnWhatsApp() {
+    public void initialize() {
+        var logoUrl = getClass().getResource("/images/gate_logo.png");
+        if (logoUrl != null) gateLogo.setImage(new Image(logoUrl.toExternalForm()));
+    }
+
+    @FXML
+    private void onMessageWhatsApp() {
         try {
-            String url = "https://wa.me/" + WHATSAPP_NUMBER
-                    + "?text=" + java.net.URLEncoder.encode("Hi, I'm reaching out regarding the Bright Future School App.", "UTF-8");
+            String message = URLEncoder.encode("Hi, I'm reaching out regarding Bright Future School App.", StandardCharsets.UTF_8);
+            String url = "https://wa.me/" + GATE_WHATSAPP_NUMBER + "?text=" + message;
             Desktop.getDesktop().browse(new URI(url));
         } catch (Exception e) {
             e.printStackTrace();
         }
-    }
-
-    @FXML
-    private void onClose() {
-        ((Stage) whatsappLabel.getScene().getWindow()).close();
     }
 }
